# mpp-arm

./: LICENSE  README.md
doc/: synth_description.docx
example/blink/: CMakeLists.txt  README.md  memory.ld
example/blink/board/blue_pill/: board.cpp  board.hpp  memory.ld  startup_gcc.cpp
example/blink/board/launchxl_cc1352p/: board.cpp  board.hpp  cc26x2r1f.lds  startup_gcc.cpp
example/blink/board/longan_nano/: board.cpp  board.hpp  gd32vf103_libopt.h  memory.ld  startup_gcc.cpp
example/blink/board/nucleo_g071rb/: board.cpp  board.hpp  startup_gcc.cpp
example/blink/board/stm32f407g_disco/: board.cpp  board.hpp  memory.ld  startup_gcc.cpp
example/blink/bsp/blue_pill/: CMakeLists.txt  bsp.cpp  bsp.hpp  memory.ld  startup_gcc.cpp
example/blink/bsp/launchxl_cc1352p/: bsp.cpp  bsp.hpp  cc26x2r1f.lds  ccfg.c  startup_gcc.cpp
example/blink/bsp/longan_nano/: CMakeLists.txt  bsp.cpp  bsp.hpp  gd32vf103_libopt.h  memory.ld  startup_gcc.cpp
example/blink/bsp/nucleo_g071rb/: CMakeLists.txt  bsp.cpp  bsp.hpp  memory.ld  startup_gcc.cpp
example/blink/bsp/stm32f407g_disco/: CMakeLists.txt  bsp.cpp  bsp.hpp  memory.ld  startup_gcc.cpp
example/blink/src/: main.cpp  stm32f407_disco.cpp  stm32f407_disco.hpp
example/cmake/: arm_gcc_toolchain.cmake  riscv_gcc_toolchain.cmake
example/crc/: CMakeLists.txt  README.md  build.sh
example/crc/board/nucleo_g071rb/: board.cpp  board.hpp  memory.ld
example/crc/board/stm32f407g_disco/: board.cpp  board.hpp  memory.ld
example/crc/bsp/blue_pill/: CMakeLists.txt  bsp.cpp  bsp.hpp
example/crc/bsp/longan_nano/: CMakeLists.txt  bsp.cpp  bsp.hpp  startup_gcc.cpp
example/crc/bsp/nucleo_g071rb/: CMakeLists.txt  bsp.cpp  bsp.hpp  memory.ld
example/crc/bsp/stm32f407g_disco/: CMakeLists.txt  bsp.cpp  bsp.hpp  startup_gcc.cpp
example/crc/src/: main.cpp
include/mpp/: cc1352p.hpp  cc26x2.hpp  gd32vf103.hpp  stm32f103xb.hpp  stm32f407xx.hpp  stm32g071xx.hpp  utils.hpp
src/: utils.hpp
src/clk/st/: stm32f407xx_clk.hpp
src/core/: bamblebee_n200.hpp  cortex_m.cpp  cortex_m.hpp  riscv.hpp
src/crypto/: crc_logic.hpp  crc_models.hpp
src/crypto/gigadevice/: gdcrc_v1.hpp
src/crypto/st/: stcrc_v1.hpp  stcrc_v2_2.hpp  stcrcf4.hpp
src/flash/st/: stflash4f.hpp
src/flash/st/spec/: stm32f401_flash.hpp  stm32f407_flash.hpp  stm32f410_flash.hpp  stm32f413_flash.hpp
src/gpio/: base.hpp  synth.hpp
src/gpio/gigadevice/: gdgpio_v1.hpp
src/gpio/gigadevice/spec/: gd32vf103xx_gpio.hpp
src/gpio/st/: stgpio4.hpp  stgpio_v1.hpp  stgpiof4.hpp
src/gpio/st/spec/: STM32F100xB_gpio.hpp  STM32F100xE_gpio.hpp  STM32F101x6_gpio.hpp  STM32F101xB_gpio.hpp  STM32F101xE_gpio.hpp  STM32F101xG_gpio.hpp  STM32F102x6_gpio.hpp  STM32F102xB_gpio.hpp  STM32F103x6_gpio.hpp  STM32F103xB_gpio.hpp  STM32F103xE_gpio.hpp  STM32F103xG_gpio.hpp  STM32F105xC_gpio.hpp  STM32F107xC_gpio.hpp  STM32F401_gpio_v1_0.hpp  STM32F410_gpio_v1_0.hpp  STM32F411_gpio_v1_0.hpp  STM32F412_gpio_v1_0.hpp  STM32F413_gpio_v1_0.hpp  STM32F417_gpio_v1_0.hpp  STM32F427_gpio_v1_0.hpp  STM32F446_gpio_v1_0.hpp  STM32F469_gpio_v1_0.hpp  STM32G07x_gpio_v1_0.hpp  gpio401.hpp  gpio407.hpp  gpio410.hpp  gpio411.hpp  gpio412.hpp  gpio427.hpp
src/gpio/ti/: cc26x2_gpio.hpp
src/gpio/ti/spec/: cc26x2.hpp
src/irq/: arm.hpp
src/irq/gigadevice/: gd32v_irq_v1.hpp
src/utils/: binutils.hpp  ioutils.hpp  timutils.hpp
tools/st/converters/gpioconv/: gpioconv.py  skeleton
tools/st/gparser/: gparser.py  skeleton
